# nuolaidauk

./: README.md  pyproject.toml  run_app.py
app/: config.py  error_log.txt  main.py  run_app.py
data/: generate_icon.py
data/generate_barcode/: generator.py
