[project]
name = "nuolaidauk"
version = "0.1.0"
description = "Programėlė, kuri turi visų prekybos centrų nuolaidines programėles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.7.1",
    "kivy>=2.3.1",
    "kivymd",
    "python-barcode>=0.15.1",
]

[tool.uv.sources]
kivymd = { git = "https://github.com/kivymd/KivyMD.git" }
