[project]
name = "nuolaidauk"
version = "0.2.0"
description = "Programėlė, kuri turi visų prekybos centrų nuolaidines programėles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "buildozer>=1.5.0",
    "cairosvg>=2.7.1",
    "kivy>=2.3.1",
    "kivymd",
    "pip>=25.0.1",
    "python-barcode>=0.15.1",
]

[tool.uv.sources]
kivymd = { git = "https://github.com/kivymd/KivyMD.git" }
